[gd_scene load_steps=6 format=2]

[ext_resource path="res://Image/card.png" type="Texture" id=1]
[ext_resource path="res://Theme/FontTC40.tres" type="Theme" id=2]
[ext_resource path="res://Script/Mouse_card.gd" type="Script" id=3]
[ext_resource path="res://Fonts/SourceHanSansHWTC-Regular.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 4 )

[node name="Card" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -73.0
margin_right = 217.0
margin_bottom = 252.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Error"
text = "Error"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -70 )
scale = Vector2( 0.88815, 0.421995 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -87.0
margin_top = -142.0
margin_right = 86.0
margin_bottom = 141.0
focus_mode = 0
enabled_focus_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 55.0
margin_top = -179.0
margin_right = 194.0
margin_bottom = -117.0
custom_colors/default_color = Color( 0.933333, 0.635294, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "X2"
text = "X2"

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
